# web-rcon

./: .env-example  .gitignore  LICENSE  README  app.py  forms.py  models.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py
backend/: app.py  models.py
public/: index.html
public/static/js/: main.js
src/: App.css  App.js
src/components/: Header.js  Player.js  PlayerList.js
src/helpers/: fetchPlayers.js  playerActions.js
