[tool.poetry]
name = "web-cod-rcon"
version = "0.1.0"
description = ""
authors = ["George Zed <georlema@gmail.com>", "Panos Papageorgiou <fullmetalmentalist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
Flask-WTF = "^0.14.3"
Flask-JWT-Extended = "^4.0.2"
Flask-SQLAlchemy = "^2.4.4"
meinheld = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipdb = "^0.13.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
